apps/hass/1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  type: LoadBalancer
  selector:
    app: home-assistant
  ports:
    - port: 8123
      targetPort: web
