apps/hass/2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass
  annotations:
    tailscale.com/proxy-group: web-proxies
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - hass
  defaultBackend:
    service:
      name: home-assistant
      port:
        number: 8123
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: hass2.treelar.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
